* Makefile.in (coalesce.o): Add. 	* coalesce.c: New file. 	* rtl.h (coalesce): Declare.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49000 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,9 @@
+Sat Jan 19 00:19:20 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* Makefile.in (coalesce.o): Add.
+	* coalesce.c: New file.
+	* rtl.h (coalesce): Declare.
+
 Thu Jan 17 15:09:02 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* combine.c (simplify_comparison): Strengthen the condition of
