--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Sat Jan 19 19:05:45 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* toplev.c (rest_of_compilation): Experimentally run two GCSE passes.
+
 Sat Jan 19 00:19:20 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* Makefile.in (coalesce.o): Add.
