* Makefile.in (md_file): Add dependancy on midrtl.md. 	* emit-rtl.c (try_split): Avoid recursive splitting in 	RTL lowering process; avoid abort on badly updated probability 	notes for now. 	* function.c (prepare_function_start): RTL form is initiallly 	RTL_FORM_MID. 	* function.h (struct function): Add rtl_form. 	* genrecog.c (pred_table): Add generic operands. 	* gensupport.c (init_md_reader): Implicitly inlucde midrtl.md 	file. 	* optabs.c (prepare_generic_operand): New function. 	(expand_binop, expand_unop, emit_cmp_and_jump_insns): 	Generate midlevel RTL. 	* recog.c (generic_address, generic_src_operand, generic_dest_operand): 	New functions. 	* recog.h (generic_address, generic_src_operand, generic_dest_operand): 	Declare. 	* toplev.c (rest_of_compilation): Do RTL lowering. 	* i386.c (ix86_expand_int_movcc): Do not crash on DImode comparisons. 	* midrtl.md: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49051 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,26 @@
+Mon Jan 21 20:14:13 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* Makefile.in (md_file): Add dependancy on midrtl.md.
+	* emit-rtl.c (try_split): Avoid recursive splitting in
+	RTL lowering process; avoid abort on badly updated probability
+	notes for now.
+	* function.c (prepare_function_start): RTL form is initiallly
+	RTL_FORM_MID.
+	* function.h (struct function): Add rtl_form.
+	* genrecog.c (pred_table): Add generic operands.
+	* gensupport.c (init_md_reader): Implicitly inlucde midrtl.md
+	file.
+	* optabs.c (prepare_generic_operand): New function.
+	(expand_binop, expand_unop, emit_cmp_and_jump_insns):
+	Generate midlevel RTL.
+	* recog.c (generic_address, generic_src_operand, generic_dest_operand):
+	New functions.
+	* recog.h (generic_address, generic_src_operand, generic_dest_operand):
+	Declare.
+	* toplev.c (rest_of_compilation): Do RTL lowering.
+	* i386.c (ix86_expand_int_movcc): Do not crash on DImode comparisons.
+	* midrtl.md: New file.
+
 Sat Jan 19 19:05:45 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* toplev.c (rest_of_compilation): Experimentally run two GCSE passes.
