--- a/ast-optimizer-branch/gcc/cp/Make-lang.in
+++ b/ast-optimizer-branch/gcc/cp/Make-lang.in
@@ -97,7 +97,8 @@ $(DEMANGLER_PROG): cxxmain.o underscore.o $(LIBDEPS)
 # Shared with C front end:
 CXX_C_OBJS = attribs.o c-common.o c-format.o c-pragma.o c-semantics.o c-lex.o \
  $(CXX_TARGET_OBJS) \
-  tree-cfg.o tree-dfa.o tree-optimize.o tree-ssa.o
+  tree-cfg.o tree-dfa.o tree-optimize.o tree-ssa.o c-simplify.o \
+  c-pretty-print.o
 
 # Language-specific object files.
 CXX_OBJS = cp/call.o cp/decl.o cp/expr.o cp/pt.o cp/typeck2.o \
