* decl.c (java_init_decl_processing): Use add_predefined_file. 	Predefine RawData.java. 	(predef_filenames): Removed. 	(java_init_decl_processing): Don't register predef_filenames. 	* jcf-parse.c (add_predefined_file): New function. 	(predefined_filename_p): Rewrote. 	(predefined_filename_p): No longer static. 	* decl.c (java_init_decl_processing): Call initialize_builtins. 	* Make-lang.in (JAVA_OBJS): Added builtins.o. 	(java/builtins.o): New target. 	* builtins.c: New file. 	* parse.y (patch_invoke): Use build_call_or_builtin. 	* java-tree.h (build_call_or_builtin): Declare. 	(initialize_builtins): Declare. 	(java_set_exception_lang_code): Removed unused declaration. 	(PREDEF_FILENAMES_SIZE): Removed. 	(java_tree_index): Added JTI_PREDEF_FILENAMES. 	(predef_filenames): New define. 	(add_predefined_file): Declare. 	(predefined_filename_p): Declare. 	* expr.c (expand_invoke): Use build_call_or_builtin.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49091 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/Make-lang.in
+++ b/gcc/java/Make-lang.in
@@ -101,7 +101,7 @@ $(srcdir)/java/keyword.h: $(srcdir)/java/keyword.gperf
 JAVA_OBJS = java/parse.o java/class.o java/decl.o java/expr.o \
   java/constants.o java/lang.o java/typeck.o java/except.o java/verify.o \
   java/zextract.o java/jcf-io.o java/jcf-parse.o java/mangle.o \
-  java/mangle_name.o \
+  java/mangle_name.o java/builtins.o \
   java/jcf-write.o java/buffer.o java/check-init.o java/jcf-depend.o \
   java/jcf-path.o java/xref.o java/boehm.o mkdeps.o
 
@@ -257,6 +257,8 @@ java/gjavah.o: $(CONFIG_H) $(SYSTEM_H) $(JAVA_TREE_H) java/gjavah.c \
 java/boehm.o: java/boehm.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(JAVA_TREE_H) \
   java/parse.h toplev.h
 java/buffer.o: java/buffer.c $(CONFIG_H) java/buffer.h $(SYSTEM_H) toplev.h
+java/builtins.o: java/builtins.c $(CONFIG_H) $(SYSTEM_H) $(JAVA_TREE_H) \
+  $(GGC_H) flags.h
 java/check-init.o: java/check-init.c $(CONFIG_H) \
   $(JAVA_TREE_H) $(SYSTEM_H) toplev.h
 java/class.o: java/class.c $(CONFIG_H) $(JAVA_TREE_H) $(RTL_H) java/jcf.h \
