* emit-rtl.c (reg_attrs_htab): New static variable. 	(reg_attrs_htab_hash, reg_attrs_htab_eq, reg_attrs_mark, 	get_reg_attrs): New functions. 	(gen-rtx_REG_Offset, set_reg_attrs_from_mem, 	 set_mem_attrs_from_reg): New. 	(set_mem_decl): Kill. 	(init_once): Add new htab. 	* expr.h (set_mem_decl): Kill. 	(set_mem_attrs_from_reg, set_reg_attrs_from_mem): Declare. 	* final.c: Include expr.h 	(get_decl_from_op): Use REG_EXPR. 	(output_asm_operand_names): Allways output separator; 	output original pseudo if available. 	* function.c (assign_params): Do not handle REGNO_DECL. 	* gcse.c (delete_store, build_store_vectors): Call 	set_reg_attrs_from_mem. 	* ggc-common.c (ggc_mark_rtx_children): Mark REG_ATTRS. 	* integrate.c: Kill REGNO_DECL handling. 	* loop.c (load_mems): Call set_reg_attrs_from_mem. 	* print-rtl.c (print_rtx): Output REG_ATTRTS. 	* regclass.c (reg_scan_mark_refs): Propagate attrs; 	do not handle REGNO_DECL. 	* reload1.c (alter_reg): Use set_mem_attrs_from_reg. 	* rtl.def (REG): Add third field. 	* rtl.h (struct reg_attrs): New. 	(rtunion_def): Add rtreg. 	(X0MEMATTR): CHeck that operand is MEM. 	(X0REGATTR): New. 	(REG_ATTRS, REG_EXPR, REG_OFFSET): New macros. 	(gen_rtx_REG_offset): Declare. 	* simplify-rtx (simplify_subreg0: Use gen_rtx_REG_offset.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49137 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,41 @@
+Wed Jan 23 15:06:52 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* emit-rtl.c (reg_attrs_htab): New static variable.
+	(reg_attrs_htab_hash, reg_attrs_htab_eq, reg_attrs_mark,
+	get_reg_attrs): New functions.
+	(gen-rtx_REG_Offset, set_reg_attrs_from_mem,
+	 set_mem_attrs_from_reg): New.
+	(set_mem_decl): Kill.
+	(init_once): Add new htab.
+	* expr.h (set_mem_decl): Kill.
+	(set_mem_attrs_from_reg, set_reg_attrs_from_mem): Declare.
+	* final.c: Include expr.h
+	(get_decl_from_op): Use REG_EXPR.
+	(output_asm_operand_names): Allways output separator;
+	output original pseudo if available.
+	* function.c (assign_params): Do not handle REGNO_DECL.
+	* gcse.c (delete_store, build_store_vectors): Call
+	set_reg_attrs_from_mem.
+	* ggc-common.c (ggc_mark_rtx_children): Mark REG_ATTRS.
+	* integrate.c: Kill REGNO_DECL handling.
+	* loop.c (load_mems): Call set_reg_attrs_from_mem.
+	* print-rtl.c (print_rtx): Output REG_ATTRTS.
+	* regclass.c (reg_scan_mark_refs): Propagate attrs;
+	do not handle REGNO_DECL.
+	* reload1.c (alter_reg): Use set_mem_attrs_from_reg.
+	* rtl.def (REG): Add third field.
+	* rtl.h (struct reg_attrs): New.
+	(rtunion_def): Add rtreg.
+	(X0MEMATTR): CHeck that operand is MEM.
+	(X0REGATTR): New.
+	(REG_ATTRS, REG_EXPR, REG_OFFSET): New macros.
+	(gen_rtx_REG_offset): Declare.
+	* simplify-rtx (simplify_subreg0: Use gen_rtx_REG_offset.
+
+Wed Jan 23 14:04:31 CET 2002 Josef Zlomek  <zlomek@matfyz.cz>
+
+	* bb-reorder.c (copy_bb_p): bug fix: avoid infinite loop.
+
 Mon Jan 21 20:14:13 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* Makefile.in (md_file): Add dependancy on midrtl.md.
