* Make-lang.in (parse.c): Adjust expected number of 	shift-reduce conflicts. 	(decl.o): Depend on diagnostic.h. 	* decl.c: Include diagnostic.h. 	(grokdeclarator): Check for null pointer. 	(finish_function): Don't abort when 	current_binding_level->parm_flag != 1, if errors have 	occurred; throw away the statement tree and extra binding 	levels, and continue. 	* lex.c (note_list_got_semicolon): Check for null pointer. 	* method.c (hack_identifier): Just return error_mark_node if 	value is error_mark_node. 	* parse.y (primary: TYPEID(type_id)): No need to use 	TYPE_MAIN_VARIANT here. 	(handler_seq): Accept an empty list of catch clauses and 	generate a fake handler block to avoid later crashes. 	(ansi_raise_identifier): Accept the error token too. 	* semantics.c (begin_class_definition, 	finish_class_definition): Check for error_mark_node.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49163 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -120,7 +120,7 @@ $(srcdir)/cp/cfns.h: $(srcdir)/cp/cfns.gperf
 
 $(srcdir)/cp/parse.h: $(srcdir)/cp/parse.c
 $(srcdir)/cp/parse.c: $(srcdir)/cp/parse.y
-	@echo "Expect 34 shift/reduce conflicts and 58 reduce/reduce conflicts."
+	@echo "Expect 36 shift/reduce conflicts and 58 reduce/reduce conflicts."
 	cd $(srcdir)/cp; $(BISON) $(BISONFLAGS) -d -o p$$$$.c parse.y ; \
 	grep '^#define[ 	]*YYEMPTY' p$$$$.c >> p$$$$.h ; \
 	mv -f p$$$$.c parse.c ; mv -f p$$$$.h parse.h
@@ -249,7 +249,7 @@ cp/cp-lang.o: cp/cp-lang.c $(CXX_TREE_H) toplev.h langhooks.h langhooks-def.h \
   c-common.h
 cp/decl.o: cp/decl.c $(CXX_TREE_H) flags.h cp/lex.h cp/decl.h stack.h \
   output.h $(EXPR_H) except.h toplev.h hash.h $(GGC_H) $(RTL_H) \
-  cp/operators.def $(TM_P_H) tree-inline.h
+  cp/operators.def $(TM_P_H) tree-inline.h diagnostic.h
 cp/decl2.o: cp/decl2.c $(CXX_TREE_H) flags.h cp/lex.h cp/decl.h $(EXPR_H) \
   output.h except.h toplev.h $(GGC_H) $(RTL_H)
 cp/typeck2.o: cp/typeck2.c $(CXX_TREE_H) flags.h toplev.h output.h $(TM_P_H) \
