* cfgbuild.c (compute_outgoing_frequencies):  Cleanup.
	* cfgbuild.c (make_edges):  Look for the next basic block
	boundary, instead of next_nonnote_insn.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49250 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,10 @@
+Sat Jan 26 20:20:34 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgbuild.c (compute_outgoing_frequencies):  Cleanup.
+
+	* cfgbuild.c (make_edges):  Look for the next basic block
+	boundary, instead of next_nonnote_insn.
+
 Thu Jan 24 22:03:47 CET 2002  Zdenek Dvorak <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* Makefile.in (OBJS): Add loop-new.o.
