* configure.in (*-*-netbsd*): New.  Skip target-newlib, target-libiberty, and target-libgloss.  Skip Java-related libraries if not supported for NetBSD on target CPU.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49258 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -617,6 +617,17 @@ case "${target}" in
   *-*-chorusos)
     noconfigdirs="$noconfigdirs target-newlib target-libgloss ${libgcj}"
     ;;
+  *-*-netbsd*)
+    # Skip some stuff on all NetBSD configurations.
+    skipdirs="$skipdirs target-newlib target-libiberty target-libgloss"
+
+    # Skip some stuff that's unsupported on some NetBSD configurations.
+    case "${target}" in
+      *)
+	noconfigdirs="$noconfigdirs ${libgcj}"
+	;;
+    esac
+    ;;
   *-*-netware)
     noconfigdirs="$noconfigdirs ${libstdcxx_version} target-librx target-newlib target-libiberty target-libgloss ${libgcj}"
     ;;
